--- a/dashboard/src/components/style.css
+++ b/dashboard/src/components/style.css
@@ -141,13 +141,22 @@ side-menu {
 	font-family: "Poppins-Regular", Helvetica;
 	font-size: 16px;
   }
-  
-  .main-display .summary {
+
+  .summary {
 	align-items: flex-start;
 	background-color: #ffffff;
 	display: inline-flex;
 	flex-direction: column;
 	position: relative;
+  }
+  
+  .presummary {
+	align-items: center;
+	background-color: #ffffff;
+	display: inline-flex;
+	flex-direction: column;
+	position: relative;
+	gap: 8px;
   }
   
   .summary-box {
@@ -167,7 +176,7 @@ side-menu {
 	resize:none;
   }
 
-  .summary button{
+  #sum{
 	padding: 0px 20px;
 	border: none;
 	background-color:#c24a05;
@@ -178,10 +187,27 @@ side-menu {
 	border-radius: 4px;
 	color: white;
   }
-
-  .summary button:hover{
+  #sum:hover{
 	background-color: #c24a0581;
   }
+
+  #vis{
+	padding: 0px 20px;
+	border: none;
+	background-color:#038e36;
+	text-align: center;
+	font-family: "Poppins-Regular", Helvetica;
+	font-size: 20px;
+	line-height: 2;
+	border-radius: 4px;
+	color: white;
+  }
+  #vis:hover{
+	background-color:#038e3681;
+  }
+
+ 
+  
 
 
   .top-nav {
