--- a/dashboard/src/components/modal/Popups.css
+++ b/dashboard/src/components/modal/Popups.css
@@ -6,10 +6,14 @@
 	/* text-align: left; */ 
 /* } */
 .new-file-form{
-	border: 1px dashed black;
+	border: 2px dashed #517664;
+	background-color: #5c86713e;
+	color: #E3DBDB;
 	display: flex;
 	flex-direction: column;
-	padding: 3px;
+	align-items: center;
+	padding: 5px;
+	border-radius:5px;
 }
 
 .form-buttons{
@@ -20,21 +24,21 @@
 input[type="file"]{
 	width: calc(100%);
 }
-input[type="file"]::file-selector-button {
-	border: 3px solid gray;
-	border-radius: 4px;
-	height: 30px;
-	padding-left: 30px;
-	cursor: pointer;
-	color: #0964b0;
-	border: 1px solid rgba(0, 0, 0, 0.16);
-	box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
-	background-color: white;
-	background-size: 30px;
-	background-repeat: no-repeat;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%230964B0'%3E%3Cpath d='M18 15v3H6v-3H4v3c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-3h-2zM7 9l1.41 1.41L11 7.83V16h2V7.83l2.59 2.58L17 9l-5-5-5 5z'/%3E%3C/svg%3E");
+input[type="file"]:hover{
+	background-color: #8f90b913;
+	cursor:pointer;
+	border-radius:4px;
 }
-
+input[type="file"]::file-selector-button {
+	border-radius: 4px;
+	height: 70px;
+	background-repeat: no-repeat;
+	background-image: url("../../../public/upload.svg");
+	background-position: center;
+	color: transparent;
+	background-color: transparent;
+	border:none;
+}
 
 label, input {
 	display:block;
@@ -46,10 +50,9 @@ label, input {
 	font-family: "Poppins-Regular", Helvetica;
 	font-size: 14px;
 	line-height: 2;
-	background-color: #0964b0;
-	color: white;
+	background-color: #517664;
+	color: #E3DBDB;
 	border-radius: 4px;
-	border: none;
 }
 
 #upload{
@@ -58,8 +61,8 @@ label, input {
 	font-family: "Poppins-Regular", Helvetica;
 	font-size: 14px;
 	line-height: 1.5;
-	background-color: #0964b0;
-	color: white;
+	background-color: #8F90B9;
+	color: #E3DBDB;
 	border-radius: 4px;
 	border: none;
 }
@@ -70,15 +73,20 @@ label, input {
 	font-family: "Poppins-Regular", Helvetica;
 	font-size: 14px;
 	line-height: 1.5;
-	background-color: white;
-	color: rgba(0, 0, 0, 0.52);
+	background-color: transparent;
+	color: #E3DBDB;
 	border-radius: 4px;
-	border: 1px solid rgba(0, 0, 0, 0.2);
+	border: none;
 }
-.newfile-btn:hover, #upload:hover{
-	background-color: #0965b0a5;
+.newfile-btn:hover{
+	background-color: #517664a7;
+	cursor: pointer;
+}
+
+#upload:hover{
+	background-color:#8f90b96d;
 }
 
 #cancel:hover{
-	background-color: rgba(0, 0, 0, 0.2);
+	background-color: #e3dbdb4a;
 }
