--- a/dashboard/src/components/style.css
+++ b/dashboard/src/components/style.css
@@ -18,17 +18,19 @@ button:hover{
   }
   
   .file-header {
-	height: 36px;
 	width: 255px;
+	margin-top: 10px;
+	margin-bottom: 5px;
   }
   
   .file-header .text-wrapper {
-	color: white;
-	font-family: "Poppins-Regular", Helvetica;
-	font-size: 22px;
+	color: #E3DBDB;
+	font-family: Georgia, serif;
+	font-size: 35px;
 	font-weight: 400;
 	text-align: center;
 	margin-top:1.5%;
+	border-bottom: solid 2px #E3DBDB;
   }
   
   .file {
@@ -54,7 +56,7 @@ button:hover{
   
   .file-name .text-wrapper{
 	color: #E3DBDB;
-	font-family: "Poppins-Regular", Helvetica;
+	font-family: Tahoma, sans-serif;
 	font-size: 12px;
 	font-weight: 400;
 	max-width:30ch;
@@ -76,7 +78,7 @@ button:hover{
   
   .logo .text-wrapper {
 	color: white;
-	font-family: "Inter-Regular", Helvetica;
+	font-family: "Poppins-Regular", Helvetica;
 	font-size: 36px;
 	font-weight: 400;
 	letter-spacing: 0;
@@ -101,42 +103,49 @@ button:hover{
 
   .main-display .title {
 	color: black;
-	font-family: "Poppins-Regular", Helvetica;
-	font-size: 30px;
-	font-weight: 400;
+	font-family: Georgia, sans-serif;
+	font-size: 40px;
+	font-weight: 500;
 	max-width:40ch;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
   }
   
-  .main-display .original {
+  .main-display .text-wrapper {
+	color: black;
+	font-family: Georgia, sans-serif;
+	font-size: 25px;
+	font-weight: 400;
+	height: 40px;
+	letter-spacing: 0;
+	line-height: normal;
+	position: relative;
+	padding-right: 20px;
+  }
+
+  .original {
 	align-items: flex-start;
 	display: inline-flex;
 	flex-direction: column;
 	position: relative;
+	padding: 15px;
   }
-  
-  .main-display .text-wrapper {
-	color: #000000;
-	font-family: "Poppins-Regular", Helvetica;
-	font-size: 24px;
-	font-weight: 400;
-	height: 39px;
-	letter-spacing: 0;
-	line-height: normal;
-	position: relative;
-	width: 233px;
+
+  .original .text-wrapper{
+	border-bottom: 4px #8F90B9 solid;
   }
   
   .original-box {
-	border: 2px solid #9797f9;
+	border: none;
+	background-color: #E3DBDB;
 	border-radius:4px;
-	height: 362px;
+	height: 280px;
 	position: relative;
 	width: 1110px;
-	font-family: "Poppins-Regular", Helvetica;
+	font-family: Tahoma, serif;
 	font-size: 16px;
+	margin-top: 5px;
   }
 
   .summary {
@@ -144,8 +153,14 @@ button:hover{
 	display: inline-flex;
 	flex-direction: column;
 	position: relative;
+	background-color: #E3DBDB;
+	padding: 0px;
   }
   
+  .summary .text-wrapper {
+	border-bottom: 4px #C6878F solid;
+  }
+
   .presummary {
 	align-items: center;
 	display: inline-flex;
@@ -155,17 +170,19 @@ button:hover{
   }
   
   .summary-box {
-	border: 2px solid #9797f9;
+	border: none;
+	background-color: #E3DBDB;
 	border-radius:4px;
 	height:226px;
 	width: 1110px;
-	font-family: "Poppins-Regular", Helvetica;
+	font-family: Tahoma, serif;
 	font-size: 16px;
+	margin-top: 5px;
   }
 
   .summary-box:focus, .original-box:focus{
 	outline:none;
-	border: 2px solid black;
+	border: none;
   }
   textarea{
 	resize:none;
@@ -174,29 +191,29 @@ button:hover{
   #sum{
 	padding: 0px 20px;
 	border: none;
-	background-color:#c24a05;
+	background-color:#C6878F;
 	text-align: center;
-	font-family: "Poppins-Regular", Helvetica;
+	font-family: Tahoma, sans-serif;
 	font-size: 20px;
 	line-height: 2;
 	border-radius: 4px;
   }
   #sum:hover{
-	background-color: #c24a0581;
+	background-color: #c6878fac;
   }
 
   #vis{
 	padding: 0px 20px;
 	border: none;
-	background-color:#038e36;
+	background-color:#6a9b84;
 	text-align: center;
-	font-family: "Poppins-Regular", Helvetica;
+	font-family: Tahoma, sans-serif;
 	font-size: 20px;
 	line-height: 2;
 	border-radius: 4px;
   }
   #vis:hover{
-	background-color:#038e3681;
+	background-color:#517664a7;
   }
 
  
