--- a/dashboard/src/components/modal/Popups.css
+++ b/dashboard/src/components/modal/Popups.css
@@ -36,7 +36,7 @@ input[type="file"]::file-selector-button {
 	height: 70px;
 	background-repeat: no-repeat;
 	background-image: url("../../../public/upload.svg");
-	background-position: left;
+	background-position:35%;
 	border: none;
 	color: transparent;
 	background-color: transparent;
@@ -56,6 +56,12 @@ label, input {
 	background-color: #517664;
 	color: #E3DBDB;
 	border-radius: 4px;
+	margin-top: 5px;
+	padding-left: 20px;
+	background-image: url("../../../public/newfile.svg");
+	background-repeat: no-repeat;
+	background-size: 20px;
+	background-position: 35%;
 }
 
 #upload{
