--- a/dashboard/src/components/style.css
+++ b/dashboard/src/components/style.css
@@ -19,7 +19,6 @@ button:hover{
   
   .file-header {
 	width: 255px;
-	margin-top: 10px;
 	margin-bottom: 5px;
   }
   
@@ -31,6 +30,7 @@ button:hover{
 	text-align: center;
 	margin-top:1.5%;
 	border-bottom: solid 2px #E3DBDB;
+	padding-bottom: 10px;
   }
   
   .file {
@@ -74,12 +74,13 @@ button:hover{
 	position: relative;
 	height: 68px;
 	border-radius: 10px;
+	background-color: #C6878F;
   }
   
   .logo .text-wrapper {
-	color: white;
-	font-family: "Poppins-Regular", Helvetica;
-	font-size: 36px;
+	color: #E3DBDB;
+	font-family: 'Brush Script MT', cursive;
+	font-size: 50px;
 	font-weight: 400;
 	letter-spacing: 0;
 	line-height: normal;
@@ -166,7 +167,7 @@ button:hover{
 	display: inline-flex;
 	flex-direction: column;
 	position: relative;
-	gap: 8px;
+	gap: 4px;
   }
   
   .summary-box {
@@ -184,36 +185,68 @@ button:hover{
 	outline:none;
 	border: none;
   }
+
   textarea{
 	resize:none;
   }
 
   #sum{
-	padding: 0px 20px;
+	padding-left: 25px;
 	border: none;
 	background-color:#C6878F;
-	text-align: center;
+	text-align: left;
 	font-family: Tahoma, sans-serif;
+	font-weight: 400;
 	font-size: 20px;
 	line-height: 2;
-	border-radius: 4px;
+	border-radius: 20px;
+	background-image: url("../../public/summarize.svg");
+	background-size: 30px;
+	background-repeat: no-repeat;
+	background-position: 87%;
+	width: 180px;
   }
   #sum:hover{
 	background-color: #c6878fac;
   }
 
   #vis{
-	padding: 0px 20px;
 	border: none;
+	padding-left: 25px;
 	background-color:#6a9b84;
-	text-align: center;
+	text-align: left;
 	font-family: Tahoma, sans-serif;
 	font-size: 20px;
 	line-height: 2;
-	border-radius: 4px;
+	border-radius: 20px;
+	background-image: url("../../public/visualize.svg");
+	background-size: 30px;
+	background-repeat: no-repeat;
+	background-position: 87%;
+	width: 180px;
   }
   #vis:hover{
 	background-color:#517664a7;
+  }
+
+  .original-box::-webkit-scrollbar{
+	background-color: #8F90B9;
+	width: 8px;
+	border-radius: 5px;
+  }
+  .original-box::-webkit-scrollbar-thumb{
+	background-color: #4E3D42;
+	border-radius: 5px;
+  }
+
+  .summary-box::-webkit-scrollbar{
+	background-color: #C6878F;
+	width: 8px;
+	border-radius: 5px;
+  }
+  .summary-box::-webkit-scrollbar-thumb{
+	background-color: #4E3D42;
+	border-radius: 5px;
   }
 
  
