--- a/dashboard/src/components/style.css
+++ b/dashboard/src/components/style.css
@@ -7,19 +7,19 @@ button:hover{
 	position: relative;
 	width: 256px;
 	background-color:#4E3D42;
-	padding: 5px;
+	padding: 15px;
   }
   
   .my-documents {
 	width: 254px;
 	display: flex;
 	flex-direction: column;
-	gap: 3px;
+	gap: 5px;
   }
   
   .file-header {
 	width: 255px;
-	margin-bottom: 5px;
+	margin-bottom: 10px;
   }
   
   .file-header .text-wrapper {
@@ -28,7 +28,7 @@ button:hover{
 	font-size: 35px;
 	font-weight: 400;
 	text-align: center;
-	margin-top:1.5%;
+	margin-top: 15px;
 	border-bottom: solid 2px #E3DBDB;
 	padding-bottom: 10px;
   }
@@ -199,7 +199,7 @@ button:hover{
 	font-weight: 400;
 	font-size: 20px;
 	line-height: 2;
-	border-radius: 20px;
+	border-radius: 5px;
 	background-image: url("../../public/summarize.svg");
 	background-size: 30px;
 	background-repeat: no-repeat;
@@ -218,7 +218,7 @@ button:hover{
 	font-family: Tahoma, sans-serif;
 	font-size: 20px;
 	line-height: 2;
-	border-radius: 20px;
+	border-radius: 5px;
 	background-image: url("../../public/visualize.svg");
 	background-size: 30px;
 	background-repeat: no-repeat;
